# typemail

./: .gitignore  AGENTS.md  CROSS_CLIENT_TESTING_GUIDE.md  CROSS_CLIENT_VERIFICATION.md  IMPLEMENTATION_PLAN.md  README.md  RELEASE_NOTES.md  dune-project  test_render.cmi  test_render.cmo  test_render.ml
_build/: .db  .digest-db  log
_build/default/: LICENSE  META.typemail  README.md  typemail.dune-package  typemail.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: button.ml  button.mli  color.mli  column.ml  divider.mli  dune  element.ml  element.mli  footer.ml  footer.mli  html_builder.mli  image.mli  paragraph.mli  render.mli  spacer.mli  typemail.cma  typemail.cmxa  typemail.cmxs  (+3 more)
docs/architecture/: adr-001-type-system.md
docs/examples/: invitation.ml
lib/: button.ml  button.mli  callout.ml  callout.mli  color.ml  color.mli  column.ml  column.mli  divider.ml  divider.mli  dune  element.ml  font_size.ml  font_size.mli  font_style.ml  font_style.mli  footer.ml  footer.mli  heading.ml  heading.mli  html_builder.ml  icon.ml  icon.mli  image.ml  image.mli  inline.ml  inline.mli  paragraph.ml  paragraph.mli  render.ml  render.mli  row.ml  row.mli  section.ml  section.mli  spacer.ml  spacer.mli  spacing.ml  spacing.mli  text_align.ml  (+3 more)
test/: create_test_emails.sh  dune  send_test_email.py  structure_tests.ml  test.ml
test/email_tests/: comprehensive_test.html
test/golden/: button.html  column.html  divider.html  footer.html  heading.html  image.html  inline.html  paragraph.html  render.html  section.html  spacer.html
(+220 files in other folders)
