(lang dune 3.16)
(name typemail)
(package
 (name typemail)
 (synopsis "Typed DSL for HTML emails that render everywhere")
 (description "typemail is an OCaml library for authoring transactional emails as composable typed components with cross-client safety enforced by the type system.")
 (depends
  (ocaml (>= 5.2))))
